# deep-performance-rul

./: .gitignore  1-data_preparation.ipynb  2-train_ocnorm.ipynb  3-apply_ocnorm.ipynb  3-estimation_data.ipynb  3-performance_filter.ipynb  4-degmodel_train.ipynb  4-init_states_normal.ipynb  4-init_states_normal_plots.ipynb  4-init_states_normal_train copy.ipynb  4-init_states_normal_train.ipynb  4p-init_states_normal_plots.ipynb  4p-init_states_plots.ipynb  4p-mixture_model_plot.ipynb  5-mixture_model_plot.ipynb  5-pf_net_train.ipynb  5-pf_net_train_SmHPC.ipynb  5-pf_net_train_SmLPC.ipynb  5-pf_net_train_SmT48.ipynb  5-pf_net_train_T48.ipynb  5-pf_net_train_cv.ipynb  5-pf_net_traint.ipynb  5-pf_net_traint_SmHPC.ipynb  5-pf_net_traint_SmLPC.ipynb  5-pf_net_traint_cv.ipynb  5-pf_net_traint_cv_SmFan.ipynb  5-pf_net_traint_cv_SmHPC.ipynb  5-pf_net_traint_cv_SmLPC.ipynb  5-pf_net_traint_cvflat.ipynb  5-pf_net_traint_cvflatW.ipynb  5-pf_net_traint_cvflatW_SmFan.ipynb  5-pf_net_traint_cvflatW_SmHPC.ipynb  5-pf_net_traint_cvflatW_SmLPC.ipynb  5-pf_net_traint_cvflat_SmFan.ipynb  5-pf_net_traint_cvflat_SmHPC.ipynb  5-pf_net_traint_cvflat_SmLPC.ipynb  5p-pf_eval_video.ipynb  5p-pf_video.ipynb  5p-plot_net_otput.ipynb  5t-particle_filter_noise_test.ipynb  (+26 more)
assests/: Presentation1 [Autosaved].pptx
assets/: Figures.pptx  abstract_predicitons.pptx  abstract_predictions.mov  pf_overview.pptx  pf_overview_nocaption.pptx  ~$abstract_predicitons.pptx
src/: 1-data_preparation.ipynb  2-flight_cond_normalization.ipynb  config.py  deg_models copy.py  deg_models.py  gmp.py  helpers.py  (+3 more)
(+53 files in other folders)
