[project]
name = "pf-rul-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.11.0",
    "imageio>=2.35.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.8",
    "kagglehub>=0.2.9",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "optuna>=4.5.0",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "skorch>=1.0.0",
    "torch>=2.5.1",
]
